@@ -13,6 +13,7 @@
     + Request new IP hangs (#4346);
     + Fixed required fields validation (#4328);
     + Can not empty address fields (#4322);
+    + Invalid content type when using API (#4168);
 
     Enhancements, changes:
     ----------------------------
